--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@google/genai": "^1.31.0",
     "lucide-react": "^0.556.0",
     "react-markdown": "^10.1.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "framer-motion": "^11.0.25",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
