feat: Update app name and integrate Supabase
Refactors project to use "CarrerX" as the application name across metadata, titles, and package details.
Adds `@supabase/supabase-js` as a dependency to enable future integration with Supabase for authentication and data storage.
Introduces a `ResumeFile` type and incorporates the file data into `ResumeAnalysis` for comprehensive resume handling.
Enhances resume analysis prompt for more constructive feedback and clearer scoring.
Adds `CALENDAR` to `AppView` enum and integrates Supabase auth listener for user session management.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-careercraft-ai",
+  "name": "carrerx",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,7 +17,8 @@
     "uuid": "^13.0.0",
     "framer-motion": "^11.0.25",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "@supabase/supabase-js": "^2.48.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
