--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carrerx",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,21 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "@google/genai": "^1.31.0",
-    "lucide-react": "^0.556.0",
-    "react-markdown": "^10.1.0",
-    "uuid": "^13.0.0",
-    "framer-motion": "^11.0.25",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@google/generativei": "^0.11.0",
+    "@supabase/supabase-js": "^2.48.1",
+    "lucide-react": "^0.344.0",
+    "framer-motion": "^11.0.8",
+    "react-markdown": "^9.0.1",
+    "uuid": "^9.0.1",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "@supabase/supabase-js": "^2.48.1"
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
