--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@google/generative-ai": "^0.11.0",
     "@supabase/supabase-js": "^2.48.1",
     "lucide-react": "^0.344.0",
