--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@google/generative-ai": "^0.11.0",
     "@supabase/supabase-js": "^2.48.1",
-    "lucide-react": "^0.395.0",
-    "framer-motion": "^11.0.8",
-    "react-markdown": "^9.0.1",
-    "uuid": "^9.0.1",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.561.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
+    "tailwind-merge": "^2.2.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
