--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@google/generative-ai": "^0.11.0",
+    "@google/genai": "^0.1.0",
     "@supabase/supabase-js": "^2.48.1",
     "lucide-react": "^0.344.0",
     "framer-motion": "^11.0.8",
